# Lie-Group-for-Robotics

./: .gitignore  CMakeLists.txt  README.md  kinematics.h
cmake/: lie_libConfig.cmake
diffdrive_example/: diffdrive.json  odom.cpp  plot.py  robot_pos.json
geometry/: se3.cpp  se3.h  so3.cpp  so3.h  test.cpp
include/lie_lib/: kinematics.h  se2.h  se3.h  uncertainty.h
lie_group/: se2.cpp  se2.h  se3.cpp  se3.h  so2.cpp  so2.h  so3.cpp  so3.h
lie_kinematics/: kinematics.cpp  kinematics.h
lie_random/: uncertainty.cpp  uncertainty.h
src/lie_group/: se2.cpp  se3.cpp  so2.cpp  so3.cpp
src/lie_kinematics/: kinematics.cpp
src/lie_random/: uncertainty.cpp
